add support async work

--- a/config
+++ b/config
@@ -4,5 +4,5 @@ HTTP_MODULES="$HTTP_MODULES ngx_http_entry_module"
 CFLAGS="-g -O0"
 CPPFLAGS="$CPPFLAGS -std=c++11"
 
-NGX_ADDON_SRCS="$NGX_ADDON_SRCS $MOD_SRC/ngx_httpso_entry_module.cpp" 
+NGX_ADDON_SRCS="$NGX_ADDON_SRCS $MOD_SRC/ngx_httpso_async_work.cpp $MOD_SRC/ngx_httpso_entry_module.cpp" 
 CORE_INCS="$CORE_INCS $MOD_SRC"
